--- a/sobremi.html
+++ b/sobremi.html
@@ -80,7 +80,7 @@
 <div class="container">
   <div class="row">
     <div class="col m-5 p-4">
-      <img src="img/Grupo 32@2x.png" alt="" width="400hv">
+      <img src="img/Yo2.jpg" alt="" width="400hv">
     </div>
     <div class="col m-4 p-2">
       <div class="sobremi-titulo">
